Latest build deployed.

--- a/sec-echelon.html
+++ b/sec-echelon.html
@@ -163,7 +163,10 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="sec-solutions.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Solutions to systems of linear equations</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-solutions.html#exercises-ch1-sec1" class="internal"><span class="codenumber">1.1</span> <span class="title">Exercises</span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-echelon.html" class="internal"><span class="codenumber">1.2</span> <span class="title">The reduced echelon form of a linear system</span></a></div></li>
+<li class="toc-item toc-section contains-active">
+<div class="toc-title-box"><a href="sec-echelon.html" class="internal"><span class="codenumber">1.2</span> <span class="title">The reduced echelon form of a linear system</span></a></div>
+<ul class="structural toc-item-list active"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-echelon.html#exercises-ch1-sec2" class="internal"><span class="codenumber">1.2</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-gauss.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Gauss--Jordan elimination</span></a></div></li>
 </ul>
 </li>
@@ -608,7 +611,197 @@ y \amp = 0
 </div>
 <div class="para" id="sec-echelon-25-5">Finally, the only pivot column in the last fourth matrix is column <span class="process-math">\(1\text{.}\)</span> However, it contains non-zero elements in more than one position.<div class="autopermalink" data-description="Paragraph"><a href="#sec-echelon-25-5" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
-<div class="autopermalink" data-description="Example 1.2.15"><a href="#sec-echelon-25" title="Copy heading and permalink for Example 1.2.15" aria-label="Copy heading and permalink for Example 1.2.15">🔗</a></div></article></details><div class="autopermalink" data-description="Section 1.2: The reduced echelon form of a linear system"><a href="#sec-echelon" title="Copy heading and permalink for Section 1.2: The reduced echelon form of a linear system" aria-label="Copy heading and permalink for Section 1.2: The reduced echelon form of a linear system">🔗</a></div></section></div>
+<div class="autopermalink" data-description="Example 1.2.15"><a href="#sec-echelon-25" title="Copy heading and permalink for Example 1.2.15" aria-label="Copy heading and permalink for Example 1.2.15">🔗</a></div></article></details><section class="exercises" id="exercises-ch1-sec2"><h3 class="heading hide-type">
+<span class="type">Exercises</span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="codenumber"></span><span class="space heading-divison-mark heading-divison-mark__space"> </span><span class="title">Exercises</span>
+</h3>
+<article class="exercise exercise-like" id="exercises-ch1-sec2-1"><h4 class="heading"><span class="codenumber">1<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec2-1-1-1">For each of the following linear systems, find the corresponding augmented matrix. Use the order of variables <span class="process-math">\(x,y,z,w\text{.}\)</span> You may have to reorder the terms in each equation before attempting to determine the augmented matrix.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-1-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div> <ol class="lower-alpha ol-marker-1" id="exercises-ch1-sec2-1-1-2">
+<li id="exercises-ch1-sec2-1-1-2-1">
+<div class="para logical" id="exercises-ch1-sec2-1-1-2-1-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-1-1-2-1-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+3x \aa - \aa y \amp =  \aa 3\\
+-5x\aa +\aa 2y \amp = \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-1-1-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.1.a"><a href="#exercises-ch1-sec2-1-1-2-1" title="Copy heading and permalink for Item 1.2.1.a" aria-label="Copy heading and permalink for Item 1.2.1.a">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-1-1-2-2">
+<div class="para logical" id="exercises-ch1-sec2-1-1-2-2-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-1-1-2-2-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa - \aa y \amp =  \aa 3\\
+\aa \aa 2x \amp = \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-1-1-2-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.1.b"><a href="#exercises-ch1-sec2-1-1-2-2" title="Copy heading and permalink for Item 1.2.1.b" aria-label="Copy heading and permalink for Item 1.2.1.b">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-1-1-2-3">
+<div class="para logical" id="exercises-ch1-sec2-1-1-2-3-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-1-1-2-3-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{7}
+x \aa - \aa y \aa-\aa z\amp =  \aa 3\\
+\aa\aa\aa\aa 3w \amp = \aa 0
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-1-1-2-3-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.1.c"><a href="#exercises-ch1-sec2-1-1-2-3" title="Copy heading and permalink for Item 1.2.1.c" aria-label="Copy heading and permalink for Item 1.2.1.c">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-1-1-2-4">
+<div class="para logical" id="exercises-ch1-sec2-1-1-2-4-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-1-1-2-4-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{9}
+y \aa - \aa x \aa + \aa 5w \aa - \aa 2z \amp = \aa 1\\
+\aa\aa x \aa - \aa y \aa-\aa z\amp =  \aa 3\\
+\aa\aa\aa\aa y\aa -\aa 3w \amp = \aa 0\\
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-1-1-2-4-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.1.d"><a href="#exercises-ch1-sec2-1-1-2-4" title="Copy heading and permalink for Item 1.2.1.d" aria-label="Copy heading and permalink for Item 1.2.1.d">🔗</a></div>
+</li>
+</ol>
+<div class="autopermalink" data-description="Exercise 1.2.1"><a href="#exercises-ch1-sec2-1" title="Copy heading and permalink for Exercise 1.2.1" aria-label="Copy heading and permalink for Exercise 1.2.1">🔗</a></div></article><article class="exercise exercise-like" id="exercises-ch1-sec2-2"><h4 class="heading"><span class="codenumber">2<span class="period heading-divison-mark heading-divison-mark__period">.</span></span></h4>
+<div class="para" id="exercises-ch1-sec2-2-1-1">Determine whether each of the following linear systems is in reduced row echelon form. Use the order of variables <span class="process-math">\(x,y,z,w\text{.}\)</span> For each system that <em class="emphasis">is not</em> in reduced row echelon form, give at least one reason for why that is the case. For each system that <em class="emphasis">is</em> in reduced row echelon form, determine the free and leading variables.<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div> <ol class="lower-alpha ol-marker-1" id="exercises-ch1-sec2-2-1-2">
+<li id="exercises-ch1-sec2-2-1-2-1">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-1-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-1-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+2x \aa + \aa y \amp = \aa 0\\
+\aa\aa y \amp =  \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-1-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.a"><a href="#exercises-ch1-sec2-2-1-2-1" title="Copy heading and permalink for Item 1.2.2.a" aria-label="Copy heading and permalink for Item 1.2.2.a">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-2">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-2-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-2-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa y \amp = \aa 0\\
+\aa\aa y \amp =  \aa 0
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.b"><a href="#exercises-ch1-sec2-2-1-2-2" title="Copy heading and permalink for Item 1.2.2.b" aria-label="Copy heading and permalink for Item 1.2.2.b">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-3">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-3-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-3-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa y \amp = \aa 0\\
+\aa\aa z \amp =  \aa 0
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-3-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.c"><a href="#exercises-ch1-sec2-2-1-2-3" title="Copy heading and permalink for Item 1.2.2.c" aria-label="Copy heading and permalink for Item 1.2.2.c">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-4">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-4-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-4-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{3}
+x \amp = \aa 0\\
+y \amp =  \aa 2
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-4-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.d"><a href="#exercises-ch1-sec2-2-1-2-4" title="Copy heading and permalink for Item 1.2.2.d" aria-label="Copy heading and permalink for Item 1.2.2.d">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-5">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-5-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-5-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa + \aa 2z \amp = \aa 3\\
+\aa\aa y \amp =  \aa 4
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-5-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.e"><a href="#exercises-ch1-sec2-2-1-2-5" title="Copy heading and permalink for Item 1.2.2.e" aria-label="Copy heading and permalink for Item 1.2.2.e">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-6">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-6-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-6-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa +\aa 3z \amp = \aa 0\\
+y \aa - \aa 5z\amp =  \aa 1\\
+\aa\aa w \amp = \aa 3
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-6-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.f"><a href="#exercises-ch1-sec2-2-1-2-6" title="Copy heading and permalink for Item 1.2.2.f" aria-label="Copy heading and permalink for Item 1.2.2.f">🔗</a></div>
+</li>
+<li id="exercises-ch1-sec2-2-1-2-7">
+<div class="para logical" id="exercises-ch1-sec2-2-1-2-7-1">
+<div class="displaymath process-math" id="exercises-ch1-sec2-2-1-2-7-1-1">
+\begin{equation*}
+\left\{
+\begin{alignedat}{5}
+x \aa +\aa 3z \amp = \aa 0\\
+y \aa - \aa 5z\amp =  \aa 1\\
+\aa\aa 0 \amp = \aa 1
+\end{alignedat}
+\right.
+\end{equation*}
+</div>
+<div class="autopermalink" data-description="Paragraph"><a href="#exercises-ch1-sec2-2-1-2-7-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
+</div>
+<div class="autopermalink" data-description="Item 1.2.2.g"><a href="#exercises-ch1-sec2-2-1-2-7" title="Copy heading and permalink for Item 1.2.2.g" aria-label="Copy heading and permalink for Item 1.2.2.g">🔗</a></div>
+</li>
+</ol>
+<div class="autopermalink" data-description="Exercise 1.2.2"><a href="#exercises-ch1-sec2-2" title="Copy heading and permalink for Exercise 1.2.2" aria-label="Copy heading and permalink for Exercise 1.2.2">🔗</a></div></article><div class="autopermalink" data-description="Exercises 1.2"><a href="#exercises-ch1-sec2" title="Copy heading and permalink for Exercises 1.2" aria-label="Copy heading and permalink for Exercises 1.2">🔗</a></div></section><div class="autopermalink" data-description="Section 1.2: The reduced echelon form of a linear system"><a href="#sec-echelon" title="Copy heading and permalink for Section 1.2: The reduced echelon form of a linear system" aria-label="Copy heading and permalink for Section 1.2: The reduced echelon form of a linear system">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
 <a class="previous-button button" href="sec-solutions.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="sec-gauss.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
 </div></main>
