--- a/sec-solutions.html
+++ b/sec-solutions.html
@@ -163,7 +163,10 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="sec-solutions.html" class="internal"><span class="codenumber">1.1</span> <span class="title">Solutions to systems of linear equations</span></a></div>
 <ul class="structural toc-item-list active"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-solutions.html#exercises-ch1-sec1" class="internal"><span class="codenumber">1.1</span> <span class="title">Exercises</span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-echelon.html" class="internal"><span class="codenumber">1.2</span> <span class="title">The reduced echelon form of a linear system</span></a></div></li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-echelon.html" class="internal"><span class="codenumber">1.2</span> <span class="title">The reduced echelon form of a linear system</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-echelon.html#exercises-ch1-sec2" class="internal"><span class="codenumber">1.2</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-gauss.html" class="internal"><span class="codenumber">1.3</span> <span class="title">Gauss--Jordan elimination</span></a></div></li>
 </ul>
 </li>
