--- a/knowl/xref/sys-subsystem.html
+++ b/knowl/xref/sys-subsystem.html
@@ -22,8 +22,8 @@
 \begin{equation}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z \amp = \aa 1 \\
-x \aa + \aa y \amp = \aa 0 \\
+x \ampp - \ampp z \amp = \ampp 1 \\
+x \ampp + \ampp y \amp = \ampp 0 \\
 \end{alignedat}
 \right.\tag{1.1.5}
 \end{equation}
