--- a/knowl/xref/sys-twoparam.html
+++ b/knowl/xref/sys-twoparam.html
@@ -22,8 +22,8 @@
 \begin{equation}
 \left\{
 \begin{alignedat}{9}
-x \aa + \aa y \aa + \aa z \aa + \aa w \amp = \aa 0 \\
-\aa \aa \aa \aa x \aa + \aa w \amp =  \aa 1
+x \ampp + \ampp y \ampp + \ampp z \ampp + \ampp w \amp = \ampp 0 \\
+\ampp \ampp \ampp \ampp x \ampp + \ampp w \amp =  \ampp 1
 \end{alignedat}
 \right.\tag{1.1.6}
 \end{equation}
