--- a/sec-echelon.html
+++ b/sec-echelon.html
@@ -143,7 +143,7 @@ eBookConfig.enable_chatcodes =  false;
 \newcommand{\Z}{\mathbb Z} 
 \newcommand{\Q}{\mathbb Q} 
 \newcommand{\R}{\mathbb R}
-\newcommand{\aa}{\amp\amp\;}
+\newcommand{\ampp}{\amp\amp\;}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -385,9 +385,9 @@ w \amp =-4
 \begin{equation*}
 \left\{
 \begin{alignedat}{9}
-\aa \aa 2y \aa + \aa z \amp = \aa 1 \\
-\aa -\aa x \aa - \aa 2y \amp = \aa 0 \\
-2x \aa + \aa 2y \aa + \aa 2z \amp = \aa 2
+\ampp \ampp 2y \ampp + \ampp z \amp = \ampp 1 \\
+\ampp -\ampp x \ampp - \ampp 2y \amp = \ampp 0 \\
+2x \ampp + \ampp 2y \ampp + \ampp 2z \amp = \ampp 2
 \end{alignedat}
 \right.
 \end{equation*}
@@ -447,10 +447,10 @@ w \amp =-4
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa 2y \amp = \aa 2\\
-\aa \aa z \amp= \aa 3\\
-\aa \aa 0 \amp = \aa 0\\
-\aa \aa 0 \amp = \aa 0
+x \ampp + \ampp 2y \amp = \ampp 2\\
+\ampp \ampp z \amp= \ampp 3\\
+\ampp \ampp 0 \amp = \ampp 0\\
+\ampp \ampp 0 \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -480,8 +480,8 @@ x=2-2t, \quad y=t,\quad z=3\qquad (t\in\R).
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z \amp = \aa 2\\
-\aa \aa y \amp = \aa 1
+x \ampp - \ampp z \amp = \ampp 2\\
+\ampp \ampp y \amp = \ampp 1
 \end{alignedat}
 \right.\text{.}
 \end{equation*}
@@ -533,8 +533,8 @@ x=2+t,\quad y=1,\quad z=t
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa 2y \amp = \aa 0\\
-\aa \aa 0 \amp = \aa 1
+x \ampp + \ampp 2y \amp = \ampp 0\\
+\ampp \ampp 0 \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -626,8 +626,8 @@ y \amp = 0
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-3x \aa - \aa y \amp =  \aa 3\\
--5x\aa +\aa 2y \amp = \aa 1
+3x \ampp - \ampp y \amp =  \ampp 3\\
+-5x\ampp +\ampp 2y \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -642,8 +642,8 @@ y \amp = 0
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa y \amp =  \aa 3\\
-\aa \aa 2x \amp = \aa 1
+x \ampp - \ampp y \amp =  \ampp 3\\
+\ampp \ampp 2x \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -658,8 +658,8 @@ x \aa - \aa y \amp =  \aa 3\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa - \aa y \aa-\aa z\amp =  \aa 3\\
-\aa\aa\aa\aa 3w \amp = \aa 0
+x \ampp - \ampp y \ampp-\ampp z\amp =  \ampp 3\\
+\ampp\ampp\ampp\ampp 3w \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -674,9 +674,9 @@ x \aa - \aa y \aa-\aa z\amp =  \aa 3\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{9}
-y \aa - \aa x \aa + \aa 5w \aa - \aa 2z \amp = \aa 1\\
-\aa\aa x \aa - \aa y \aa-\aa z\amp =  \aa 3\\
-\aa\aa\aa\aa y\aa -\aa 3w \amp = \aa 0\\
+y \ampp - \ampp x \ampp + \ampp 5w \ampp - \ampp 2z \amp = \ampp 1\\
+\ampp\ampp x \ampp - \ampp y \ampp-\ampp z\amp =  \ampp 3\\
+\ampp\ampp\ampp\ampp y\ampp -\ampp 3w \amp = \ampp 0\\
 \end{alignedat}
 \right.
 \end{equation*}
@@ -695,8 +695,8 @@ y \aa - \aa x \aa + \aa 5w \aa - \aa 2z \amp = \aa 1\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-2x \aa + \aa y \amp = \aa 0\\
-\aa\aa y \amp =  \aa 1
+2x \ampp + \ampp y \amp = \ampp 0\\
+\ampp\ampp y \amp =  \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -711,8 +711,8 @@ y \aa - \aa x \aa + \aa 5w \aa - \aa 2z \amp = \aa 1\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa y \amp = \aa 0\\
-\aa\aa y \amp =  \aa 0
+x \ampp + \ampp y \amp = \ampp 0\\
+\ampp\ampp y \amp =  \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -727,8 +727,8 @@ x \aa + \aa y \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa y \amp = \aa 0\\
-\aa\aa z \amp =  \aa 0
+x \ampp + \ampp y \amp = \ampp 0\\
+\ampp\ampp z \amp =  \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -743,8 +743,8 @@ x \aa + \aa y \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{3}
-x \amp = \aa 0\\
-y \amp =  \aa 2
+x \amp = \ampp 0\\
+y \amp =  \ampp 2
 \end{alignedat}
 \right.
 \end{equation*}
@@ -759,8 +759,8 @@ y \amp =  \aa 2
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa 2z \amp = \aa 3\\
-\aa\aa y \amp =  \aa 4
+x \ampp + \ampp 2z \amp = \ampp 3\\
+\ampp\ampp y \amp =  \ampp 4
 \end{alignedat}
 \right.
 \end{equation*}
@@ -775,9 +775,9 @@ x \aa + \aa 2z \amp = \aa 3\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa +\aa 3z \amp = \aa 0\\
-y \aa - \aa 5z\amp =  \aa 1\\
-\aa\aa w \amp = \aa 3
+x \ampp +\ampp 3z \amp = \ampp 0\\
+y \ampp - \ampp 5z\amp =  \ampp 1\\
+\ampp\ampp w \amp = \ampp 3
 \end{alignedat}
 \right.
 \end{equation*}
@@ -792,9 +792,9 @@ y \aa - \aa 5z\amp =  \aa 1\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa +\aa 3z \amp = \aa 0\\
-y \aa - \aa 5z\amp =  \aa 1\\
-\aa\aa 0 \amp = \aa 1
+x \ampp +\ampp 3z \amp = \ampp 0\\
+y \ampp - \ampp 5z\amp =  \ampp 1\\
+\ampp\ampp 0 \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
