--- a/sec-solutions.html
+++ b/sec-solutions.html
@@ -143,7 +143,7 @@ eBookConfig.enable_chatcodes =  false;
 \newcommand{\Z}{\mathbb Z} 
 \newcommand{\Q}{\mathbb Q} 
 \newcommand{\R}{\mathbb R}
-\newcommand{\aa}{\amp\amp\;}
+\newcommand{\ampp}{\amp\amp\;}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -579,9 +579,9 @@ z \amp = 2
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z \amp = \aa 1 \\
-x \aa + \aa y \amp = \aa 0 \\
-y \aa + \aa z \amp = \aa 0
+x \ampp - \ampp z \amp = \ampp 1 \\
+x \ampp + \ampp y \amp = \ampp 0 \\
+y \ampp + \ampp z \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -591,9 +591,9 @@ y \aa + \aa z \amp = \aa 0
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z \amp = \aa 1 \\
-x \aa - \aa z \amp = \aa 0 \\
-y \aa + \aa z \amp = \aa 0
+x \ampp - \ampp z \amp = \ampp 1 \\
+x \ampp - \ampp z \amp = \ampp 0 \\
+y \ampp + \ampp z \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -603,8 +603,8 @@ y \aa + \aa z \amp = \aa 0
 \begin{equation}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z \amp = \aa 1 \\
-x \aa + \aa y \amp = \aa 0 \\
+x \ampp - \ampp z \amp = \ampp 1 \\
+x \ampp + \ampp y \amp = \ampp 0 \\
 \end{alignedat}
 \right.\tag{1.1.5}
 \end{equation}
@@ -621,8 +621,8 @@ x \aa + \aa y \amp = \aa 0 \\
 \begin{equation}
 \left\{
 \begin{alignedat}{9}
-x \aa + \aa y \aa + \aa z \aa + \aa w \amp = \aa 0 \\
-\aa \aa \aa \aa x \aa + \aa w \amp =  \aa 1
+x \ampp + \ampp y \ampp + \ampp z \ampp + \ampp w \amp = \ampp 0 \\
+\ampp \ampp \ampp \ampp x \ampp + \ampp w \amp =  \ampp 1
 \end{alignedat}
 \right.\tag{1.1.6}
 \end{equation}
@@ -683,8 +683,8 @@ x=t,\quad y=s,\quad z=-1-s,\quad w=-t\qquad (s,t\in\R)\text{.}
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa w \amp = \aa 0 \\
-2y^2\aa -\aa x \amp =  \aa 1
+x \ampp + \ampp w \amp = \ampp 0 \\
+2y^2\ampp -\ampp x \amp =  \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -699,8 +699,8 @@ x \aa + \aa w \amp = \aa 0 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa w \amp = \aa 0 \\
-\pi^2y\aa -\aa x \amp =  \aa 1
+x \ampp + \ampp w \amp = \ampp 0 \\
+\pi^2y\ampp -\ampp x \amp =  \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -715,8 +715,8 @@ x \aa + \aa w \amp = \aa 0 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-\aa \aa x \aa + \aa w \amp = \aa 0 \\
-3\sqrt{y}\aa -\aa 3\sqrt{y} \aa - \aa x \amp =  \aa 1
+\ampp \ampp x \ampp + \ampp w \amp = \ampp 0 \\
+3\sqrt{y}\ampp -\ampp 3\sqrt{y} \ampp - \ampp x \amp =  \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -736,14 +736,14 @@ x \aa + \aa w \amp = \aa 0 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-2x \aa + \aa y \amp = \aa 3 \\
-\aa \aa y \amp =  \aa 1
+2x \ampp + \ampp y \amp = \ampp 3 \\
+\ampp \ampp y \amp =  \ampp 1
 \end{alignedat}
 \right.\qquad\text{and}\qquad
 \left\{
 \begin{alignedat}{5}
-x \aa + \aa y \amp = \aa 2 \\
-\aa \aa x \amp =  \aa 1
+x \ampp + \ampp y \amp = \ampp 2 \\
+\ampp \ampp x \amp =  \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -763,8 +763,8 @@ x \aa + \aa y \amp = \aa 2 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-3x \aa + \aa y \amp = \aa 2 \\
-5x\aa -\aa 2y \amp =  \aa 3
+3x \ampp + \ampp y \amp = \ampp 2 \\
+5x\ampp -\ampp 2y \amp =  \ampp 3
 \end{alignedat}
 \right.
 \end{equation*}
@@ -779,8 +779,8 @@ x \aa + \aa y \amp = \aa 2 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{6}
-3x \aa + \aa y \amp = \aa \aa 8723648 \\
-5x\aa -\aa 2y \amp =  \aa -\aa 2147986
+3x \ampp + \ampp y \amp = \ampp \ampp 8723648 \\
+5x\ampp -\ampp 2y \amp =  \ampp -\ampp 2147986
 \end{alignedat}
 \right.
 \end{equation*}
@@ -795,8 +795,8 @@ x \aa + \aa y \amp = \aa 2 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa y \amp =  \aa 1 \\
-2x\aa -\aa 2y \amp =   \aa 2
+x \ampp - \ampp y \amp =  \ampp 1 \\
+2x\ampp -\ampp 2y \amp =   \ampp 2
 \end{alignedat}
 \right.
 \end{equation*}
@@ -811,8 +811,8 @@ x \aa - \aa y \amp =  \aa 1 \\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa y \amp = \aa  1 \\
-2x\aa -\aa 2y \amp =  \aa 0
+x \ampp - \ampp y \amp = \ampp  1 \\
+2x\ampp -\ampp 2y \amp =  \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
