--- a/sec-gauss.html
+++ b/sec-gauss.html
@@ -143,7 +143,7 @@ eBookConfig.enable_chatcodes =  false;
 \newcommand{\Z}{\mathbb Z} 
 \newcommand{\Q}{\mathbb Q} 
 \newcommand{\R}{\mathbb R}
-\newcommand{\aa}{\amp\amp\;}
+\newcommand{\ampp}{\amp\amp\;}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
@@ -198,9 +198,9 @@ eBookConfig.enable_chatcodes =  false;
 \begin{equation*}
 \left\{
 \begin{alignedat}{9}
-3y \aa - \aa 2z \aa + \aa w \amp = \aa 0\\
-2x \aa + \aa 3y \aa + \aa z \amp = \aa 1\\
-\aa \aa 3x \aa + \aa 2w \amp = \aa 3
+3y \ampp - \ampp 2z \ampp + \ampp w \amp = \ampp 0\\
+2x \ampp + \ampp 3y \ampp + \ampp z \amp = \ampp 1\\
+\ampp \ampp 3x \ampp + \ampp 2w \amp = \ampp 3
 \end{alignedat}\right.,\qquad\qquad\qquad
 \left(
 \begin{array}{cccc|c}
@@ -222,9 +222,9 @@ eBookConfig.enable_chatcodes =  false;
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-2x \aa + \aa 3y \aa + \aa z \amp = \aa 1\\
-3y \aa - \aa 2z \aa + \aa w \amp = \aa 0\\
-\aa \aa 3x \aa + \aa 2w \amp = \aa 3\\
+2x \ampp + \ampp 3y \ampp + \ampp z \amp = \ampp 1\\
+3y \ampp - \ampp 2z \ampp + \ampp w \amp = \ampp 0\\
+\ampp \ampp 3x \ampp + \ampp 2w \amp = \ampp 3\\
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -247,9 +247,9 @@ eBookConfig.enable_chatcodes =  false;
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
-3y \aa - \aa 2z \aa + \aa w \amp = \aa 0\\
-\aa \aa 3x \aa + \aa 2w \amp = \aa 3
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{1}{2}z \amp = \ampp \frac{1}{2}\\
+3y \ampp - \ampp 2z \ampp + \ampp w \amp = \ampp 0\\
+\ampp \ampp 3x \ampp + \ampp 2w \amp = \ampp 3
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -272,9 +272,9 @@ x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
-3y \aa - \aa 2z \aa + \aa w \amp = \aa 0\\
--\frac{9}{2}y \aa - \aa \frac{3}{2}z \aa + \aa 2w \amp = \aa \frac{3}{2}
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{1}{2}z \amp = \ampp \frac{1}{2}\\
+3y \ampp - \ampp 2z \ampp + \ampp w \amp = \ampp 0\\
+-\frac{9}{2}y \ampp - \ampp \frac{3}{2}z \ampp + \ampp 2w \amp = \ampp \frac{3}{2}
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -297,9 +297,9 @@ x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
-y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
--\frac{9}{2}y \aa - \aa \frac{3}{2}z \aa + \aa 2w \amp = \aa \frac{3}{2}
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{1}{2}z \amp = \ampp \frac{1}{2}\\
+y \ampp - \ampp \frac{2}{3}z \ampp + \ampp \frac{1}{3}w \amp = \ampp 0\\
+-\frac{9}{2}y \ampp - \ampp \frac{3}{2}z \ampp + \ampp 2w \amp = \ampp \frac{3}{2}
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -316,9 +316,9 @@ y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
-y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
-\aa - \aa \frac{9}{2}z \aa + \aa \frac{7}{2}w \amp = \aa \frac{3}{2}
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{1}{2}z \amp = \ampp \frac{1}{2}\\
+y \ampp - \ampp \frac{2}{3}z \ampp + \ampp \frac{1}{3}w \amp = \ampp 0\\
+\ampp - \ampp \frac{9}{2}z \ampp + \ampp \frac{7}{2}w \amp = \ampp \frac{3}{2}
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -335,9 +335,9 @@ y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{1}{2}z \amp = \aa \frac{1}{2}\\
-y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
-\aa  \aa z \aa - \aa \frac{7}{9}w \amp = \aa -\frac{1}{3}
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{1}{2}z \amp = \ampp \frac{1}{2}\\
+y \ampp - \ampp \frac{2}{3}z \ampp + \ampp \frac{1}{3}w \amp = \ampp 0\\
+\ampp  \ampp z \ampp - \ampp \frac{7}{9}w \amp = \ampp -\frac{1}{3}
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -360,9 +360,9 @@ y \aa - \aa \frac{2}{3}z \aa + \aa \frac{1}{3}w \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa \frac{3}{2}y \aa + \aa \frac{7}{18}w \amp = \aa \frac{2}{3}\\
-\aa \aa y \aa - \aa \frac{5}{27}w \amp = -\aa \frac{2}{9}\\
-\aa \aa z \aa - \aa \frac{7}{9}w \amp = -\aa \frac{1}{3}
+x \ampp + \ampp \frac{3}{2}y \ampp + \ampp \frac{7}{18}w \amp = \ampp \frac{2}{3}\\
+\ampp \ampp y \ampp - \ampp \frac{5}{27}w \amp = -\ampp \frac{2}{9}\\
+\ampp \ampp z \ampp - \ampp \frac{7}{9}w \amp = -\ampp \frac{1}{3}
 \end{alignedat}
 \right.\qquad\qquad\qquad
 \left(
@@ -421,9 +421,9 @@ x=1-\frac{2}{3}t,\quad y=-\frac{2}{9}+\frac{5}{27}t,\quad z=-\frac{1}{3}+\frac{7
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-x \aa + \aa y \aa - \aa z \amp = \aa 0\\
-\aa \aa 2x \aa - \aa y \amp = \aa 1\\
-\aa \aa 2x \aa + \aa 2z \amp = \aa 3
+x \ampp + \ampp y \ampp - \ampp z \amp = \ampp 0\\
+\ampp \ampp 2x \ampp - \ampp y \amp = \ampp 1\\
+\ampp \ampp 2x \ampp + \ampp 2z \amp = \ampp 3
 \end{alignedat}
 \right.\text{.}
 \end{equation*}
@@ -539,8 +539,8 @@ x \aa + \aa y \aa - \aa z \amp = \aa 0\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa 2y  \amp = \aa 2\\
-2x \aa + \aa 3y \amp = \aa 1
+x \ampp - \ampp 2y  \amp = \ampp 2\\
+2x \ampp + \ampp 3y \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -555,8 +555,8 @@ x \aa - \aa 2y  \amp = \aa 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-3x \aa + \aa y  \amp = \aa 1\\
-6x \aa + \aa 2y \amp = \aa 1
+3x \ampp + \ampp y  \amp = \ampp 1\\
+6x \ampp + \ampp 2y \amp = \ampp 1
 \end{alignedat}
 \right.
 \end{equation*}
@@ -571,8 +571,8 @@ x \aa - \aa 2y  \amp = \aa 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-3x \aa + \aa y  \amp = \aa 1\\
-6x \aa + \aa 2y \amp = \aa 2
+3x \ampp + \ampp y  \amp = \ampp 1\\
+6x \ampp + \ampp 2y \amp = \ampp 2
 \end{alignedat}
 \right.
 \end{equation*}
@@ -587,9 +587,9 @@ x \aa - \aa 2y  \amp = \aa 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-y \aa - \aa z  \amp = -\aa 1\\
-x \aa + \aa 2y \amp = \aa 2\\
-2x \aa - \aa z \amp = \aa 0
+y \ampp - \ampp z  \amp = -\ampp 1\\
+x \ampp + \ampp 2y \amp = \ampp 2\\
+2x \ampp - \ampp z \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -604,9 +604,9 @@ x \aa + \aa 2y \amp = \aa 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-y \aa - \aa z  \amp = -\aa 1\\
-x \aa + \aa 2y \amp = \aa 2\\
-2x \aa - \aa w \amp = \aa 0
+y \ampp - \ampp z  \amp = -\ampp 1\\
+x \ampp + \ampp 2y \amp = \ampp 2\\
+2x \ampp - \ampp w \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -621,9 +621,9 @@ x \aa + \aa 2y \amp = \aa 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z  \amp = \aa 1\\
-x \aa + \aa y \amp = \aa 0\\
-y \aa + \aa z \amp = \aa 0
+x \ampp - \ampp z  \amp = \ampp 1\\
+x \ampp + \ampp y \amp = \ampp 0\\
+y \ampp + \ampp z \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -638,9 +638,9 @@ y \aa + \aa z \amp = \aa 0
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-x \aa - \aa z  \amp = \aa 1\\
-x \aa + \aa y \amp = \aa 0\\
-y \aa + \aa z \amp = \aa 0
+x \ampp - \ampp z  \amp = \ampp 1\\
+x \ampp + \ampp y \amp = \ampp 0\\
+y \ampp + \ampp z \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
@@ -655,8 +655,8 @@ y \aa + \aa z \amp = \aa 0
 \begin{equation*}
 \left\{
 \begin{alignedat}{7}
-y \aa + \aa z \aa + \aa w  \amp = \aa 1\\
-x \aa + \aa 2y \aa +\aa w \amp = \aa 0
+y \ampp + \ampp z \ampp + \ampp w  \amp = \ampp 1\\
+x \ampp + \ampp 2y \ampp +\ampp w \amp = \ampp 0
 \end{alignedat}
 \right.
 \end{equation*}
