--- a/sec-linear-maps.html
+++ b/sec-linear-maps.html
@@ -143,7 +143,7 @@ eBookConfig.enable_chatcodes =  false;
 \newcommand{\Z}{\mathbb Z} 
 \newcommand{\Q}{\mathbb Q} 
 \newcommand{\R}{\mathbb R}
-\newcommand{\aa}{\amp\amp\;}
+\newcommand{\ampp}{\amp\amp\;}
 \newcommand{\lt}{&lt;}
 \newcommand{\gt}{&gt;}
 \newcommand{\amp}{&amp;}
