Latest build deployed.

--- a/sec-gauss.html
+++ b/sec-gauss.html
@@ -490,7 +490,7 @@ x \ampp + \ampp y \ampp - \ampp z \amp = \ampp 0\\
 \right)\text{.}
 \end{equation*}
 </div>
-<div class="para">We are almost there. We now need to add <span class="process-math">\(2/3\)</span>$ times the last row to the second one and add the last row to the first row.</div>
+<div class="para">We are almost there. We now need to add <span class="process-math">\(2/3\)</span> times the last row to the second one and add the last row to the first row.</div>
 <div class="displaymath process-math" id="sec-gauss-18-1-12">
 \begin{equation*}
 \left(
@@ -604,8 +604,8 @@ x \ampp + \ampp 2y \amp = \ampp 2\\
 \begin{equation*}
 \left\{
 \begin{alignedat}{5}
-y \ampp - \ampp z  \amp = -\ampp 1\\
-x \ampp + \ampp 2y \amp = \ampp 2\\
+y \ampp + \ampp 2z  \amp = -\ampp 1\\
+3y \ampp + \ampp 2w \amp = \ampp 2\\
 2x \ampp - \ampp w \amp = \ampp 0
 \end{alignedat}
 \right.
@@ -637,10 +637,10 @@ y \ampp + \ampp z \amp = \ampp 0
 <div class="displaymath process-math" id="exercises-ch1-sec3-1-1-2-7-1-1">
 \begin{equation*}
 \left\{
-\begin{alignedat}{5}
-x \ampp - \ampp z  \amp = \ampp 1\\
-x \ampp + \ampp y \amp = \ampp 0\\
-y \ampp + \ampp z \amp = \ampp 0
+\begin{alignedat}{7}
+\ampp \ampp x \ampp - \ampp z  \amp = \ampp 1\\
+\ampp \ampp x \ampp + \ampp y \amp = \ampp 0\\
+x \ampp - \ampp y \ampp - \ampp 2z \amp = \ampp 2
 \end{alignedat}
 \right.
 \end{equation*}
