Latest build deployed.

--- a/frontmatter.html
+++ b/frontmatter.html
@@ -102,7 +102,7 @@ eBookConfig.allow_pairs = false;
 eBookConfig.enableScratchAC = false;
 eBookConfig.build_info = "";
 eBookConfig.python3 = null;
-eBookConfig.runestone_version = '7.11.8';
+eBookConfig.runestone_version = '7.11.9';
 eBookConfig.jobehost = '';
 eBookConfig.proxyuri_runs = '';
 eBookConfig.proxyuri_files = '';
@@ -176,7 +176,10 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-chapter">
 <div class="toc-title-box"><a href="ch-euclidean-spaces.html" class="internal"><span class="codenumber">2</span> <span class="title">Euclidean spaces</span></a></div>
 <ul class="structural toc-item-list">
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-vectors.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Vectors</span></a></div></li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-vectors.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Vectors</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-vectors.html#exercises-chapter2-section1" class="internal"><span class="codenumber">2.1</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-dependence.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Linear dependence</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-subspaces.html" class="internal"><span class="codenumber">2.3</span> <span class="title">Linear subspaces</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-matrices.html" class="internal"><span class="codenumber">2.4</span> <span class="title">Matrices</span></a></div></li>
@@ -192,7 +195,7 @@ eBookConfig.enable_chatcodes =  false;
 <div class="author-name">Pedro Lemos</div>
 <div class="author-info">Mathematics Department<br>Temple University</div>
 </div>
-<div class="date">January 12, 2026</div>
+<div class="date">January 14, 2026</div>
 <nav class="summary-links"><ul><li><a href="frontmatter-3.html" class="internal"><span class="title">Preface</span></a></li></ul></nav><div class="autopermalink" data-description="Front Matter"><a href="#frontmatter" title="Copy heading and permalink for Front Matter" aria-label="Copy heading and permalink for Front Matter">🔗</a></div></section></div>
 <div id="ptx-content-footer" class="ptx-content-footer">
 <a class="previous-button button" href="linear-algebra-lecture-notes.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="frontmatter-3.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
