--- a/sec-linear-maps.html
+++ b/sec-linear-maps.html
@@ -102,7 +102,7 @@ eBookConfig.allow_pairs = false;
 eBookConfig.enableScratchAC = false;
 eBookConfig.build_info = "";
 eBookConfig.python3 = null;
-eBookConfig.runestone_version = '7.11.8';
+eBookConfig.runestone_version = '7.11.9';
 eBookConfig.jobehost = '';
 eBookConfig.proxyuri_runs = '';
 eBookConfig.proxyuri_files = '';
@@ -176,7 +176,10 @@ eBookConfig.enable_chatcodes =  false;
 <li class="toc-item toc-chapter contains-active">
 <div class="toc-title-box"><a href="ch-euclidean-spaces.html" class="internal"><span class="codenumber">2</span> <span class="title">Euclidean spaces</span></a></div>
 <ul class="structural toc-item-list contains-active">
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-vectors.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Vectors</span></a></div></li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-vectors.html" class="internal"><span class="codenumber">2.1</span> <span class="title">Vectors</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-vectors.html#exercises-chapter2-section1" class="internal"><span class="codenumber">2.1</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-dependence.html" class="internal"><span class="codenumber">2.2</span> <span class="title">Linear dependence</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-subspaces.html" class="internal"><span class="codenumber">2.3</span> <span class="title">Linear subspaces</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-matrices.html" class="internal"><span class="codenumber">2.4</span> <span class="title">Matrices</span></a></div></li>
