--- a/sec-linear-maps.html
+++ b/sec-linear-maps.html
@@ -145,6 +145,7 @@ eBookConfig.enable_chatcodes =  false;
 \newcommand{\Id}{\mathrm{Id}}
 
 \DeclareMathOperator{\diag}{\mathrm{diag}}
+\DeclareMathOperator{\vspan}{\mathrm{span}}
 \newcommand{\Mat}{\mathrm{Mat}}
 \newcommand{\N}{\mathbb N} 
 \newcommand{\Z}{\mathbb Z} 
