--- a/knowl/xref/lem-more-vectors-than-dimension.html
+++ b/knowl/xref/lem-more-vectors-than-dimension.html
@@ -34,7 +34,7 @@ a_{1j}\bv_1+a_{2j}\bv_2+\ldots + a_{nj}\bv_n=\bu_j
 <div class="autopermalink" data-description="Paragraph"><a href="#lem-more-vectors-than-dimension-2-1" title="Copy heading and permalink for Paragraph" aria-label="Copy heading and permalink for Paragraph">🔗</a></div>
 </div>
 <div class="para logical">
-<div class="para">To be clear, we are trying to find scalars <span class="process-math">\(x_1,x_2,\ldots,x_m\text{,}\)</span> not all zero, such that <span class="process-math">\(x_1\bu_1+\x_2\bu_2+\ldots+x_n\bu_n=\bz\text{.}\)</span> It will be enough that these scalars satisfy</div>
+<div class="para">To be clear, we are trying to find scalars <span class="process-math">\(x_1,x_2,\ldots,x_m\text{,}\)</span> not all zero, such that <span class="process-math">\(x_1\bu_1+x_2\bu_2+\ldots+x_n\bu_n=\bz\text{.}\)</span> It will be enough that these scalars satisfy</div>
 <div class="displaymath process-math">
 \begin{equation*}
 x_1a_{i1} + x_2a_{i2}+\ldots+x_ma_{im}=0\text{.}
