--- a/sec-matrices.html
+++ b/sec-matrices.html
@@ -198,7 +198,10 @@ eBookConfig.enable_chatcodes =  false;
 <div class="toc-title-box"><a href="sec-linear-dependence.html" class="internal"><span class="codenumber">2.3</span> <span class="title">Linear dependence</span></a></div>
 <ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-linear-dependence.html#exercises-chapter2-section2" class="internal"><span class="codenumber">2.3</span> <span class="title">Exercises</span></a></div></li></ul>
 </li>
-<li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-subspaces.html" class="internal"><span class="codenumber">2.4</span> <span class="title">Linear subspaces</span></a></div></li>
+<li class="toc-item toc-section">
+<div class="toc-title-box"><a href="sec-linear-subspaces.html" class="internal"><span class="codenumber">2.4</span> <span class="title">Linear subspaces</span></a></div>
+<ul class="structural toc-item-list"><li class="toc-item toc-exercises"><div class="toc-title-box"><a href="sec-linear-subspaces.html#exercises-chapter2-section4" class="internal"><span class="codenumber">2.4</span> <span class="title">Exercises</span></a></div></li></ul>
+</li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-linear-maps.html" class="internal"><span class="codenumber">2.5</span> <span class="title">Linear maps</span></a></div></li>
 </ul>
 </li>
